tests/__snapshots__/validation-toBeApplicable-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

  4 |   test("must be provided", () => {
  5 |     class Fixture {
  6 |       @(expect().type.toBeApplicable)
    |         ~~~~~~
  7 |       toString() {
  8 |         return "Fixture";
  9 |       }

      at ./__typetests__/toBeApplicable.tst.ts:6:9

Error: An argument for 'source' must be of a function type.

  13 |   test("must be of a function type", () => {
  14 |     class Fixture {
  15 |       @(expect("sample").type.toBeApplicable)
     |                ~~~~~~~~
  16 |       toString() {
  17 |         return "Fixture";
  18 |       }

       at ./__typetests__/toBeApplicable.tst.ts:15:16

